--- a/public/css/master.css
+++ b/public/css/master.css
@@ -17,7 +17,7 @@ nav{
 
 .navbar{
 	/*background-color:black;*/
-	background-color:#00171F;
+	background-color: rgba(0,0,0,0.9);
 }
 
 .navbar li a{
@@ -29,27 +29,260 @@ nav{
 	margin-top:50px;
 }
 .heading{
-	margin-top: 30%;
+	margin-top: 25%;
+	margin-bottom:25%;
+	text-align: center;
 	color:white;
+	background-color:rgba(0,0,0,0.6);
+	/*text-decoration: underline;*/
+	/*animation: slideInDown;
+	animation-duration:3s;
+	position:absolute;*/
 }
 
 #homeBanner{
+	top:-20%;
 	height:100vh;
-	background-color:rgba(0,0,0,0.2);
 
 }
 
-#homeBanner img{
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	z-index: -1;
-	/*height:100%;*/
-	width:100%;
-}
 
 #builtWith{
+	padding:5% 0 10% 0;
 	background-color:#FFFFFF;
-	
+	background-color:#DADADA;
+}
+#builtWith h2{
+	text-decoration: underline;
+}
+
+#about {
+	background-color:#DADADA;
+	padding-top:5%;
+}
+#about h1{
+	margin-bottom:5%;
+	text-decoration: underline;
+}
+#about p{
+	font-family:courier;
+	font-size:20px;
+}
+
+.icon{
+	height: 75px;
+	margin: 0 auto;
+	padding-top: 5%;
+
+}
+/*projects*/
+.project{
+	height: 30vh;
+}
+
+.project-description{
+	background-color:rgba(0,0,0,0.7);
+	margin-bottom:5%;
+	margin-top:5%;
+}
+
+.project-description  p{
+
+	font-size: 18px;
+	font-family: courier;
+	color:white;
+}
+
+.project-description h2{
+	color:white;
+}
+
+.project-description a{
+	background-color:#fff;
+	color:black;
+}
+.project-description table{
+	font-family:courier;
+	background-color:white;
+}
+.api{
+	padding-top:6%;
+}
+.label {
+	font-family: courier;
+	font-size:14px;
+}
+#graphs{
+	padding-top:10%;
+	background-color:#DADADA;
+}
+#graphs h2{
+	text-decoration:underline;
+}
+
+
+
+/*animations*/
+.animated {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+    transition: all linear 1s;
+    display: block !important;
+}
+
+.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove {
+    opacity: 0;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove.ng-hide-remove-active {
+    opacity: 1;
+}
+
+.animate-show.animated.slideDown{
+	-webkit-animation-name: slideInDown;
+  	animation-name: slideInDown;
+}
+
+
+@-webkit-keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInDown {
+  -webkit-animation-name: slideInDown;
+  animation-name: slideInDown;
+}
+
+
+/*for government stats*/
+.bar {
+  fill: rgba(49, 71, 88, 0.99);
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis {
+  font: 12px arial;
+}
+text:hover{
+	font-size:15px;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke-width:2;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
+.line{
+	fill:none;
+	stroke:steelblue;
+	stroke-width: 2.5;
+	shape-rendering: auto;
+}
+.svg{
+	width:100% !important;
+}
+
+#series{
+	margin-left: 10%;
+}
+
+/*preloader*/
+.spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  font-size: 10px;
+}
+
+.spinner > div {
+  background-color: #333;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% { 
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% { 
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
+}
+
+/*media queries*/
+@media (max-width:400px){
+	#homeBanner{
+		background-size: auto !important;
+		padding-top: 175px;
+		padding-bottom:50px;
+		height:auto;
+	}
 }
 
